# Tic-Tac-Toe-AI

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Source.cpp  build.sh  prereqs.sh  run.sh  rundocker.sh  test.cpp  test.sh
scripts/: build.sh  prereqs.sh  prereqs_1.sh  rundocker.sh  test.sh
src/: Source.cpp  test.cpp  utils.cpp
test/: test_Source.cpp
